--- a/SocketBootstrap/App.config
+++ b/SocketBootstrap/App.config
@@ -24,7 +24,7 @@
 		</servers>
 		<serverTypes>
 			<add name="TelnetServer"
-                 type="SocketBootstrap.Models.TelnetServer, SocketBootstrap"/>
+                 type="SocketServer.Models.TelnetServer, SocketServer"/>
 		</serverTypes>
 	</superSocket>
 	<startup>
