option to talk( bigshout) between 2 servers

--- a/SocketBootstrap/App.config
+++ b/SocketBootstrap/App.config
@@ -10,6 +10,7 @@
     <servers>
       <server name="TelnetServerA" serverTypeName="TelnetServer" ip="Any" port="2012" maxConnectionNumber="5"/>
       <server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="5"/>
+	  <server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="5"/>
     </servers>
     <serverTypes>
       <add name="TelnetServer" type="SocketServer.Servers.Telnet.TelnetServer, SocketServer" />
