--- a/SocketBootstrap/App.config
+++ b/SocketBootstrap/App.config
@@ -1,23 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine" />
-  </configSections>
-  <appSettings>
-    <add key="ServiceName" value="SuperSocketService" />
-  </appSettings>
-  <superSocket>
-    <servers>
-      <server name="TelnetServerA" serverTypeName="TelnetServer" ip="Any" port="2012" maxConnectionNumber="5"/>
-      <server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="5"/>
-	  <server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="5"/>
-    </servers>
-    <serverTypes>
-      <add name="TelnetServer" type="SocketServer.Servers.Telnet.TelnetServer, SocketServer" />
-	  <add name="CustomServer" type="SocketServer.Servers.Custom.CustomServer, SocketServer" />
-    </serverTypes>
-  </superSocket>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-  </startup>
+	<configSections>
+		<section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine" />
+		<sectionGroup name="gameSettings">
+			<section name="account" type="SocketServer.Config.AccountConfig, SocketServer" />
+		</sectionGroup>
+	</configSections>
+	<appSettings>
+		<add key="ServiceName" value="SuperSocketService" />
+	</appSettings>
+	<superSocket>
+		<servers>
+			<server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="20"/>
+			<server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="20"/>
+		</servers>
+		<serverTypes>
+			<add name="CustomServer" type="SocketServer.Servers.Custom.CustomServer, SocketServer" />
+		</serverTypes>
+	</superSocket>
+	<gameSettings>
+		<account minPasswordLength="4">
+			<register defaultMap="Town1" startPosX="200" startPosY="200"/>
+		</account>
+	</gameSettings>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+	</startup>
 </configuration>
