Some code refactoring Added a simulation loop to the server with a "bot" moving around for some testing Added Checks when players login to start/stop the simulation loop when needed to avoid unneeded cpu usage Added SYNC packets that will probably be used later to sync the client and server loops

--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Message.cs" />
     <Compile Include="MessageHelper.cs" />
     <Compile Include="Models\Player.cs" />
+    <Compile Include="Packets\Client\cSync.cs" />
+    <Compile Include="Packets\Server\svSync.cs" />
     <Compile Include="Packets\Server\svChat.cs" />
     <Compile Include="Packets\Client\cChat.cs" />
     <Compile Include="Packets\Client\cLogin.cs" />
