--- a/SocketBootstrap/App.config
+++ b/SocketBootstrap/App.config
@@ -12,7 +12,7 @@
 	<superSocket>
 		<servers>
 			<server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="20"/>
-			<server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="20"/>
+			<!--<server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="20"/>-->
 		</servers>
 		<serverTypes>
 			<add name="CustomServer" type="SocketServer.Servers.Custom.CustomServer, SocketServer" />
