--- a/SocketBootstrap/SocketServer.csproj
+++ b/SocketBootstrap/SocketServer.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Commands\Custom\REGISTER.cs" />
     <Compile Include="Commands\Custom\CHAT.cs" />
     <Compile Include="Commands\Custom\LOGIN.cs" />
+    <Compile Include="Commands\Custom\SYNC.cs" />
     <Compile Include="Commands\PackageWriter.cs" />
     <Compile Include="Config\ConfigHelper.cs" />
     <Compile Include="Config\AccountConfig.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Servers\Custom\CustomSession.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Simulation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
