--- a/SocketBootstrap/App.config
+++ b/SocketBootstrap/App.config
@@ -11,7 +11,7 @@
 	</appSettings>
 	<superSocket>
 		<servers>
-			<server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="20"/>
+			<server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="20" />
 			<!--<server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="20"/>-->
 		</servers>
 		<serverTypes>
@@ -20,10 +20,18 @@
 	</superSocket>
 	<gameSettings>
 		<account minPasswordLength="4">
-			<register defaultMap="Town1" startPosX="200" startPosY="200"/>
+			<register defaultMap="Town1" startPosX="200" startPosY="200" />
 		</account>
 	</gameSettings>
 	<startup>
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
 	</startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
