Added ServerManager support as per http://docs.supersocket.net/v1-6/en-US/SuperSocket-ServerManager

--- a/SocketBootstrap/App.config
+++ b/SocketBootstrap/App.config
@@ -1,36 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<configSections>
-		<section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine" />
-		<sectionGroup name="gameSettings">
-			<section name="account" type="SocketServer.Config.AccountConfig, SocketServer" />
-		</sectionGroup>
-	</configSections>
-	<appSettings>
-		<add key="ServiceName" value="SuperSocketService" />
-	</appSettings>
-	<superSocket>
-		<servers>
-			<server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="20" />
-			<!--<server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="20"/>-->
-		</servers>
-		<serverTypes>
-			<add name="CustomServer" type="SocketServer.Servers.Custom.CustomServer, SocketServer" />
-		</serverTypes>
-	</superSocket>
-	<gameSettings>
-		<account minPasswordLength="4">
-			<register defaultMap="Town1" startPosX="200" startPosY="200" />
-		</account>
-	</gameSettings>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-	</startup>
+  <configSections>
+    <section name="superSocket" type="SuperSocket.SocketEngine.Configuration.SocketServiceConfig, SuperSocket.SocketEngine" />
+    <sectionGroup name="gameSettings">
+      <section name="account" type="SocketServer.Config.AccountConfig, SocketServer" />
+    </sectionGroup>
+  </configSections>
+  <appSettings>
+    <add key="ServiceName" value="SuperSocketService" />
+  </appSettings>
+  <superSocket>
+    <servers>
+      <server name="CustomServerA" serverTypeName="CustomServer" ip="Any" port="2013" maxConnectionNumber="20" />
+      <!--<server name="CustomServerB" serverTypeName="CustomServer" ip="Any" port="2014" maxConnectionNumber="20"/>-->
+      <server name="ManagementServer" serverType="SuperSocket.ServerManager.ManagementServer, SuperSocket.ServerManager">
+        <listeners>
+          <add ip="Any" port="4502" />
+        </listeners>
+        <users>
+          <user name="test" password="test"/>
+        </users>
+      </server>
+    </servers>
+    <serverTypes>
+      <add name="CustomServer" type="SocketServer.Servers.Custom.CustomServer, SocketServer" />
+    </serverTypes>
+  </superSocket>
+  <gameSettings>
+    <account minPasswordLength="4">
+      <register defaultMap="Town1" startPosX="200" startPosY="200" />
+    </account>
+  </gameSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.8.0" newVersion="2.0.8.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
