--- a/SocketBootstrap/packages.config
+++ b/SocketBootstrap/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net462" />
+  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
   <package id="SuperSocket" version="1.6.6.1" targetFramework="net462" />
   <package id="SuperSocket.Engine" version="1.6.6.1" targetFramework="net462" />
+  <package id="SuperSocket.ServerManager" version="1.7.0.6" targetFramework="net462" />
   <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net462" />
 </packages>
